# RGB_to_CMYK

./: .gitignore  README.md  _JPEGのRGBとCMYKの違い .md  main.py  pyproject.toml
.github/prompts/: plan-rgbToCmyk.prompt.md
rgb_to_cmyk/: __init__.py  cli.py
tests/: test_cli.py
